gateway/templates/observability-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
  annotations: 
    external-dns.alpha.kubernetes.io/hostname: grafana.dev.csye6225cloud.me
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "grafana.dev.csye6225cloud.me"
    tls:
      mode: SIMPLE
      credentialName: grafana-cert-tls
