gateway/templates/observability-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - grafana.dev.csye6225cloud.me
  gateways:
    - grafana-gateway
  http:
    - match:
      - port: 80
      redirect:
        uri: https://grafana.dev.csye6225cloud.me
        port: 443
    - route:
        - destination:
            host: prometheus-grafana.monitoring.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: monitoring
spec: 
  host: prometheus-grafana.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
